<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@color/home_background_white">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_chess_background"
        android:contentDescription="@string/chess_background_description"
        android:padding="@dimen/background_padding"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">
    <Button
        android:layout_width="@dimen/buttons_total_width"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/startButton"
        android:onClick="startClock"
        android:textSize="@dimen/buttons_text_size"
        android:textStyle="bold"
        android:background="@drawable/home_button"
        android:textColor="@color/home_button_text_white"
        android:layout_marginBottom="@dimen/buttons_margin_bottom"/>

    <Button
        android:layout_width="@dimen/buttons_total_width"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:onClick="switchSettings"
        android:background="@drawable/home_button"
        android:textColor="@color/home_button_text_white"
        android:textStyle="bold"
        android:id="@+id/settingsButton"
        android:textSize="@dimen/buttons_text_size"/>
    </LinearLayout>
</RelativeLayout>
