<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="@dimen/settings_margin_sides"
    android:layout_marginRight="@dimen/settings_margin_sides"
    android:layout_marginTop="@dimen/settings_margin_top_bottom"
    android:layout_marginBottom="@dimen/settings_margin_top_bottom"
    android:fillViewport="true">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/time_control_dropdown_container">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_dropdown_label"
                android:id="@+id/time_control_dropdown_label"
                android:textSize="@dimen/dropdown_label_textSize"
                android:textStyle="bold"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_control_dropdown"
                android:background="@drawable/spinner_background"
                android:layout_marginTop="@dimen/dropdown_margin_top">
            </Spinner>
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_control_description"
            android:textSize="@dimen/dropdown_description_textSize"
            android:layout_below="@id/time_control_dropdown_container"
            android:layout_marginBottom="@dimen/settings_margin_bottom"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/white_container"
            android:layout_below="@id/time_control_description"
            android:layout_marginBottom="@dimen/settings_margin_bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_white_label"
                android:textSize="@dimen/color_label_textSize"
                android:id="@+id/white_label"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/white_hours_container"
                android:gravity="center_vertical"
                android:weightSum="3">
                <TextView
                    android:id="@+id/settings_white_hours_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hours_label"
                    android:textSize="@dimen/time_label_textSize"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_marginLeft="@dimen/settings_input_margin_left"
                    android:id="@+id/settings_white_hours_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@string/default_number"
                    android:layout_weight="2"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/white_minutes_container"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_minutes_label"
                    android:id="@+id/settings_white_minutes_label"
                    android:textSize="@dimen/time_label_textSize"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_marginLeft="@dimen/settings_input_margin_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_white_minutes_input"
                    android:inputType="number"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/white_seconds_container"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_white_seconds_label"
                    android:textSize="@dimen/time_label_textSize"
                    android:text="@string/settings_seconds_label"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_marginLeft="@dimen/settings_input_margin_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_white_seconds_input"
                    android:inputType="number"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/white_delay_container"
                android:visibility="gone"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_white_delay_label"
                    android:textSize="@dimen/time_label_textSize"
                    android:text="@string/settings_dropdown_delay"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/settings_input_margin_left"
                    android:id="@+id/settings_white_delay_input"
                    android:inputType="number"
                    android:text="@string/default_number"
                    android:layout_weight="2"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/black_container"
            android:layout_below="@id/white_container">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_black_label"
                android:textSize="@dimen/color_label_textSize"
                android:id="@+id/black_label"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/black_hours_container"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hours_label"
                    android:id="@+id/settings_black_hours_label"
                    android:textSize="@dimen/time_label_textSize"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_marginLeft="@dimen/settings_input_margin_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_black_hours_input"
                    android:text="@string/default_number"
                    android:inputType="number"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/black_minutes_container"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_minutes_label"
                    android:id="@+id/settings_black_minutes_label"
                    android:textSize="@dimen/time_label_textSize"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_marginLeft="@dimen/settings_input_margin_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_black_minutes_input"
                    android:inputType="number"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/black_seconds_container"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_black_seconds_label"
                    android:textSize="@dimen/time_label_textSize"
                    android:text="@string/settings_seconds_label"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_marginLeft="@dimen/settings_input_margin_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_black_seconds_input"
                    android:inputType="number"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/black_delay_container"
                android:visibility="gone"
                android:weightSum="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_black_delay_label"
                    android:textSize="@dimen/time_label_textSize"
                    android:text="@string/settings_dropdown_delay"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/settings_input_margin_left"
                    android:id="@+id/settings_black_delay_input"
                    android:inputType="number"
                    android:text="@string/default_number"
                    android:layout_weight="2"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/button_container"
            android:layout_below="@id/black_container"
            android:weightSum="2">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:id="@+id/settings_save_button"
                android:background="@drawable/settings_button"
                android:textColor="@color/home_button_text_white"
                android:layout_margin="@dimen/settings_button_margin"
                android:visibility="gone"/>
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start_button"
                android:textColor="@color/home_button_text_white"
                android:background="@drawable/settings_button"
                android:layout_margin="@dimen/settings_button_margin"
                android:id="@+id/settings_start_button"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>

